force-app/main/default/objects/SBQQ__TimingLog__c/SBQQ__TimingLog__c.object-meta.xml
<CustomObject>
    <description>Timing stack log entry.</description>
    <label>Timing Log</label>
    <nameField>
        <displayFormat>LOG{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timing Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>