force-app/main/default/objects/SBQQ__TimingLog__c/fields/SBQQ__Element__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Element__c</fullName>
        <description>Element name</description>
        <label>Element</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>