force-app/main/default/objects/SBQQ__TimingLog__c/fields/SBQQ__Finish__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Finish__c</fullName>
        <description>Finishing CPU time</description>
        <label>Finish</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>