force-app/main/default/objects/SBQQ__TimingLog__c/fields/SBQQ__Log__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Log__c</fullName>
        <description>Log entry</description>
        <inlineHelpText>Log entry</inlineHelpText>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>