force-app/main/default/objects/SBQQ__TimingLog__c/fields/SBQQ__Start__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Start__c</fullName>
        <description>Starting CPU time</description>
        <inlineHelpText>Starting CPU time</inlineHelpText>
        <label>Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>