force-app/main/default/objects/SBQQ__TimingLog__c/fields/SBQQ__Total__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Total__c</fullName>
        <description>Total CPU time consumed.</description>
        <label>Total CPU Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>