force-app/main/default/objects/SBQQ__TimingLog__c/fields/SBQQ__URL__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__URL__c</fullName>
        <description>Target of the request</description>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>