force-app/main/default/objects/SBQQ__TimingLog__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Element__c</columns>
        <columns>SBQQ__Start__c</columns>
        <columns>SBQQ__Finish__c</columns>
        <columns>SBQQ__Total__c</columns>
        <columns>SBQQ__Log__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>